# SpotiCards

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: CONFIG_GUIDE.md  design_config.json  settings.py
src/: card_generator.py  config.py  main.py  metadata_cleaner.py  spotify_api.py  storage.py
src/cards/: generator.py  storage.py
src/cli/: create.py  main.py  play.py
src/core/: data_loader.py  metadata.py  spotify_client.py  utils.py
src/game/: card_loader.py  gui.py  state.py
