[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[project]
name = "SpotiCards"
version = "0.1.0"
description = "Generate song cards with metadata and QR codes from any Spotify playlist."
authors = [
    { name = "Lara Fuchs", email = "lara25fuchs@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "qrcode>=7.4.0",
    "reportlab>=4.0.0",
    "PySide6>=6.6.0"
]
license = { text = "MIT" }

[project.urls]
"Homepage" = "https://github.com/Lara-lob/SpotiCards"
"Bug Tracker" = "https://github.com/Lara-lob/SpotiCards/issues"

[project.scripts]
spoticards = "src.cli.main:main"